update cors